parser/src/snapshots/parser__parser__tests__parse_test_data@fail__fail30.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail30.json
---
Err(
    ExpectedTokenError {
        expected: [
            String,
            Number,
            Null,
            LBrace,
            LBracket,
            True,
            False,
        ],
        actual: Illegal(
            Some(
                Number(
                    MissingExponent,
                ),
            ),
        ),
        invalid_row: 1,
        invalid_col: 2,
    },
)
